[project]
name = "reinforcement-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "qiskit>=2.3.0",
    "seaborn>=0.13.2",
    "cachetools>=7.0.5",
    "matplotlib[pyplot]>=3.10.8",
    "mqt.bench>=1.1.11",
    "networkx>=3.6.1",
    "py-spy>=0.4.1",
    "pyrefly>=0.56.0",
    "pytest>=9.0.2",
    "qiskit>=2.3.0",
    "qiskit-ibm-runtime>=0.45.1",
    "ruff>=0.15.5",
    "torch==2.2.2",
    "numpy<2",
    "torch-geometric>=2.7.0",
    "tornado>=6.5.4",
    "jupyter>=1.1.1",
    "types-cachetools>=6.2.0.20260408",
    "pylatexenc>=2.10",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pyrefly>=0.57.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
