[project]
name = "reinforcement-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
    "qiskit>=2.3.0",
    "seaborn>=0.13.2",
    "cachetools>=7.0.5",
    "qiskit>=2.3.0",
    "qiskit-ibm-runtime>=0.45.1",
    "rich>=14.3.3",
    "ruff>=0.15.5",
    "sb3-contrib>=2.8.0",
    "stable-baselines3[extra]>=2.7.1",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "tornado>=6.5.4",
    "tqdm>=4.67.3",
    "matplotlib>=3.10.8",
    "types-tqdm>=4.67.3.20260408",
    "ray[tune]>=2.55.0",
    "optuna>=4.8.0",
    "gymnasium>=1.2.3",
    "qiskit-ibm-transpiler>=0.18.0",
    "networkx>=2.8.5",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "pyrefly>=0.57.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
